<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Guidelines -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="50dp" />
    <!-- End Guidelines -->

    <!-- Title -->
    <TextView
        android:id="@+id/reperes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/reperes"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline_start"/>
    <!-- End Title -->

    <!-- Nutrition values -->
    <View
        android:id="@+id/shape_1"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="@id/matieres_grasses"
        android:background="@drawable/shape_oval"/>

    <TextView
        android:id="@+id/matieres_grasses"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/matieres_grasses"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/reperes"
        app:layout_constraintStart_toEndOf="@id/guideline_start_2"/>

    <View
        android:id="@+id/shape_2"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="@id/acides_gras"
        android:background="@drawable/shape_oval"/>


    <TextView
        android:id="@+id/acides_gras"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/acides_gras"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/matieres_grasses"
        app:layout_constraintStart_toEndOf="@id/guideline_start_2"/>

    <View
        android:id="@+id/shape_3"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="@id/sucres"
        android:background="@drawable/shape_oval"/>


    <TextView
        android:id="@+id/sucres"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/sucres"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/acides_gras"
        app:layout_constraintStart_toEndOf="@id/guideline_start_2"/>

    <View
        android:id="@+id/shape_4"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="@id/sel"
        android:background="@drawable/shape_oval"/>


    <TextView
        android:id="@+id/sel"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/sel"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/sucres"
        app:layout_constraintStart_toEndOf="@id/guideline_start_2"/>
    <!-- End Nutrition values -->

</androidx.constraintlayout.widget.ConstraintLayout>